--- a/appliedProjectsofArchitecturalCompetitions/assets/style.css
+++ b/appliedProjectsofArchitecturalCompetitions/assets/style.css
@@ -47,3 +47,14 @@
     background-size: 18px;
     background-color: rgba(255, 255, 255, 1);
 }
+
+.leaflet-control-layers-expanded {
+    background: rgba(255, 255, 255, 0.8) !important;
+    border: 0px !important;
+    border-radius: 0px !important;
+}
+
+.leaflet-control-search {
+    border: 0px !important;
+    border-radius: 0px !important;
+}
